--- a/src/config.toml
+++ b/src/config.toml
@@ -1,5 +1,2 @@
-{
-fecha_formato = "%d/%m/%Y"      #Formato en que están escritas las fechas dentro del archivo CSV
-
-columnas_salida = ["Producto", "fecha_inicio", "fecha_fin", "cantidad", "valor_total"]  #Archivo de salida
-}
+fecha_formato = "%d/%m/%Y"
+columnas_salida = ["Producto", "FechaInicio", "FechaFin", "Cantidad", "ValorTotal"]
